--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <svg version="1.1" id="home-anim" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
      viewBox="0 0 1820 1080" style="enable-background:new 0 0 1820 1080;" xml:space="preserve">
-
+<!-- background -->
 <g id="home">
     <defs>
         <rect id="masque" y="0.4" width="1820" height="1080"/>
@@ -117,7 +117,7 @@
     </g>
 </g>
 </svg>
-
+<!-- Top div with header and image -->
 	<div id="bgbd">
     <div id=>
         <div id="ic1"><img src="https://i.imgur.com/OlFfaaq.png"></div>
